--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Bracket</title>
+    <link rel="stylesheet" href="static/css/reset.css">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
+    <header>
+        <div class="wrapper narrow">
+            <h1>Movie Bracket</h1>
+            <a class="back" href="">Home</a>
+            <a class="forth" href="">Settings</a>
+        </div>
+    </header>
+    <div id="settings"> 
+        <div id="preferences"></div>
+        <div id="database">
+            
+        </div>
+    </div> 
+    <main>
+        <div class="wrapper wide">
+            <div class="col left">
+                <div class="round input down">
+                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <div class="awards">
+                        <span class="cannes"></span>
+                        <span class="cannes"></span>
+                        <span class="cannes"></span>
+                        <span class="cannes"></span>
+                        <span class="cannes"></span>
+                    </div>
+                    <input type="text"placeholder="Moonrise Kingdom">
+                    <div class="awards">
+                        <span class="cannes"></span>
+                        <span class="cannes"></span>
+                        <span class="cannes"></span>
+                        <span class="cannes"></span>
+                    </div>
+                </div> 
+                <div class="round input up">
+                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <div class="awards"></div>
+                    <input type="text"placeholder="Moonrise Kingdom">
+                    <div class="awards"></div>
+                </div> 
+                <div class="round input">
+                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <div class="awards"></div>
+                    <input type="text"placeholder="Moonrise Kingdom">
+                    <div class="awards"></div>
+                </div> 
+            </div><div class="col right">
+                <div class="round first"></div>
+                <div class="round second"></div> 
+            </div>
+        </div> 
+    </main>
     
 </body>
 </html>
