--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,25 @@
     <main>
         <div class="wrapper wide">
             <div class="col left">
-                <div class="round input down">
+                <div class="round input down right">
                     <input type="text" placeholder="The Royal Tennenbaums">
+                    <hr/> 
+                    <input type="text"placeholder="Moonrise Kingdom">
+                </div> 
+                <div class="round input up right">
+                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <hr/> 
+                    <input type="text"placeholder="Moonrise Kingdom">
+                </div> 
+                <div class="round input up right med">
+                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <hr/> 
+                    <input type="text"placeholder="Moonrise Kingdom">
+                </div> 
+            </div>
+            <div class="col right">
+                <div class="round first down">
+                    <h4>The Darjeeling Limited</h4>
                     <div class="awards">
                         <span class="cannes"></span>
                         <span class="cannes"></span>
@@ -32,32 +49,23 @@
                         <span class="cannes"></span>
                         <span class="cannes"></span>
                     </div>
-                    <input type="text"placeholder="Moonrise Kingdom">
+                    <hr/> 
+                    <h4>The Darjeeling Limited</h4>
                     <div class="awards">
+                        <span class="cannes"></span>
                         <span class="cannes"></span>
                         <span class="cannes"></span>
                         <span class="cannes"></span>
                         <span class="cannes"></span>
                     </div>
                 </div> 
-                <div class="round input up">
+                <div class="round input second">
                     <input type="text" placeholder="The Royal Tennenbaums">
-                    <div class="awards"></div>
+                    <hr /> 
                     <input type="text"placeholder="Moonrise Kingdom">
-                    <div class="awards"></div>
                 </div> 
-                <div class="round input">
-                    <input type="text" placeholder="The Royal Tennenbaums">
-                    <div class="awards"></div>
-                    <input type="text"placeholder="Moonrise Kingdom">
-                    <div class="awards"></div>
-                </div> 
-            </div><div class="col right">
-                <div class="round first"></div>
-                <div class="round second"></div> 
             </div>
         </div> 
-    </main>
-    
+    </main> 
 </body>
 </html>
