--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,7 +40,7 @@ main {
 
 .col.right {
     padding-top: 64px;
-    margin-left: -2px;
+    margin-left: -5px;
 }
 
 .round {
@@ -51,7 +51,7 @@ main {
     margin-bottom: 16px;
     background: #FFFFFF;
     border: 1px solid #ECECEC;
-    box-shadow: 0 5px 20px 0 rgba(0,0,0,0.14);
+    box-shadow: 0 5px 20px 0 rgba(0,0,0,0.1);
     border-radius: 16px;
     z-index: 5;
 }
@@ -63,69 +63,71 @@ main {
     display: block;
     left: 100%;
     z-index: 0;
-    /*
-    transform: scaleY(2);
-    transform-origin: 0 0;
-    */
 }
 
-.round.up::after {
-    content: url('../img/link-up.svg');
-    bottom: 47%;
-    width: 32px;
-    height: 40px;
-}
-
+.round.up::after,
 .round.down::after {
-    content: url('../img/link-down.svg');
-    top: 50%;
-    width: 32px;
-    height: 40px;
+    width: 16px;
+    height: 72px;
 }
 
-.round.first {
-    margin-left: 0;
-}
+.round.up.long::after,
+.round.down.long::after { height: 199px; }
 
-.round.second {
-    margin-left: 64px;
-}
+.round.up.right::after { height: 40px; }
 
-.round.third {
-    margin-left: 128px;
-}
+.round.right.up::after, 
+.round.right.down::after { width: 32px; }
 
-/* 1, 3, 5 ... 
-.col.left .round:nth-child(2n+1)::after {
-    content: 'link down';
+.round.right.med::after { width: 97px; }
+.round.right.long::after { width: 160px; }
 
-}
+.round.up::after { bottom: 50%; }
+.round.down::after { top: 50%; }
 
-*/
+.round.up::after { content: url('../img/up.svg'); }
+.round.down::after { content: url('../img/down.svg'); }
+.round.up.long::after { content: url('../img/up-long.svg'); }
+.round.up.right::after { content: url('../img/up-right.svg'); }
+.round.up.right::after { content: url('../img/up-right.svg'); }
+.round.down.long::after { content: url('../img/down-long.svg'); }
+.round.down.right::after { content: url('../img/down-right.svg'); }
+.round.up.right.med::after { content: url('../img/up-right-med.svg'); }
+.round.up.right.long::after { content: url('../img/up-right-long.svg'); }
+
+.round.first { margin-left: 0; }
+
+.round.second { margin-left: 64px; }
+
+.round.third { margin-left: 128px; }
 
 /* ROUND CONTENTS */
 
+.round { padding-top: 6px; }
+
+.round h4,
 .round input {
     font-family: Roboto;
     font-weight: 500;
     font-size: 14px;
     color: #414141;
     display: block;
-    padding: 16px;
-    padding-bottom: 0;
     margin: 0;
     width: 100%;
 }
 
-.round .awards {
-    box-sizing: border-box;
-    width: 100%;
-    height: 16px;
-    padding: 4px 16px;
-    padding-bottom: 20px;
-    margin-bottom: -8px;
-    border-bottom: 1px solid #ECECEC;
+.round h4 { padding: 5px 16px; }
+
+.round input { padding: 16px; }
+
+.round .awards { padding: 0 16px; }
+
+.round hr { 
+    border-color: #ECECEC; 
+    margin: 8px 0;
 }
+
+.round.input hr { margin: 0; }
 
 .round .awards:last-child {
     border-bottom: none;
@@ -134,6 +136,8 @@ main {
 .awards span {
     height: 12px;
     width: 12px;
-    background: red;
     display: inline-block;
 }
+
+span.cannes { background: url('../img/cannes.svg'); }
+span.globes { background }
