--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <title>Movie Bracket</title>
     <link rel="stylesheet" href="static/css/reset.css">
     <link rel="stylesheet" href="static/css/style.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="static/js/bracket.js"></script>
 </head>
 <body>
     <header>
@@ -23,47 +25,28 @@
     <main>
         <div class="wrapper wide">
             <div class="col left">
-                <div class="round input down right">
+                <div class="round input">
                     <input type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
-                    <input type="text"placeholder="Moonrise Kingdom">
+                    <input type="text" placeholder="Moonrise Kingdom">
                 </div> 
-                <div class="round input up right">
+                <div class="round input">
                     <input type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
-                    <input type="text"placeholder="Moonrise Kingdom">
+                    <input type="text" placeholder="Moonrise Kingdom">
                 </div> 
-                <div class="round input up right med">
+                <div class="round input">
                     <input type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
-                    <input type="text"placeholder="Moonrise Kingdom">
+                    <input type="text" placeholder="Moonrise Kingdom">
+                </div> 
+                <div class="round input">
+                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <hr/> 
+                    <input type="text" placeholder="Moonrise Kingdom">
                 </div> 
             </div>
             <div class="col right">
-                <div class="round first down">
-                    <h4>The Darjeeling Limited</h4>
-                    <div class="awards">
-                        <span class="cannes"></span>
-                        <span class="cannes"></span>
-                        <span class="cannes"></span>
-                        <span class="cannes"></span>
-                        <span class="cannes"></span>
-                    </div>
-                    <hr/> 
-                    <h4>The Darjeeling Limited</h4>
-                    <div class="awards">
-                        <span class="cannes"></span>
-                        <span class="cannes"></span>
-                        <span class="cannes"></span>
-                        <span class="cannes"></span>
-                        <span class="cannes"></span>
-                    </div>
-                </div> 
-                <div class="round input second">
-                    <input type="text" placeholder="The Royal Tennenbaums">
-                    <hr /> 
-                    <input type="text"placeholder="Moonrise Kingdom">
-                </div> 
             </div>
         </div> 
     </main> 
