--- a/templates/index.html
+++ b/templates/index.html
@@ -25,22 +25,22 @@
     <main>
         <div class="wrapper wide">
             <div class="col left">
-                <div class="round input">
+                <div class="match input">
                     <input type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
                     <input type="text" placeholder="Moonrise Kingdom">
                 </div> 
-                <div class="round input">
+                <div class="match input">
                     <input type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
                     <input type="text" placeholder="Moonrise Kingdom">
                 </div> 
-                <div class="round input">
+                <div class="match input">
                     <input type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
                     <input type="text" placeholder="Moonrise Kingdom">
                 </div> 
-                <div class="round input">
+                <div class="match input">
                     <input type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
                     <input type="text" placeholder="Moonrise Kingdom">
