--- a/templates/index.html
+++ b/templates/index.html
@@ -26,24 +26,24 @@
         <div class="wrapper wide">
             <div class="col left">
                 <div class="match input">
-                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <input value='Avatar' type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
-                    <input type="text" placeholder="Moonrise Kingdom">
+                    <input value='Solaris' type="text" placeholder="Moonrise Kingdom">
                 </div> 
                 <div class="match input">
-                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <input value='Moonrise Kingdom' type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
-                    <input type="text" placeholder="Moonrise Kingdom">
+                    <input value='Jerk' type="text" placeholder="Moonrise Kingdom">
                 </div> 
                 <div class="match input">
-                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <input value='Titanic' type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
-                    <input type="text" placeholder="Moonrise Kingdom">
+                    <input value='Blue Velvet' type="text" placeholder="Moonrise Kingdom">
                 </div> 
                 <div class="match input">
-                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <input value='Twin Peaks' type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
-                    <input type="text" placeholder="Moonrise Kingdom">
+                    <input value='Rushmore' type="text" placeholder="Moonrise Kingdom">
                 </div> 
             </div>
             <div class="col right">
