--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,6 @@
     <header>
         <div class="wrapper narrow">
             <h1>Movie Bracket</h1>
-            <a class="back" href="">Home</a>
-            <a class="forth" href="">Settings</a>
         </div>
     </header>
     <div id="settings"> 
@@ -26,27 +24,29 @@
         <div class="wrapper wide">
             <div class="col left">
                 <div class="match input">
-                    <input value='Avatar' type="text" placeholder="The Royal Tennenbaums">
+                    <input type="text" placeholder="The Royal Tennenbaums">
                     <hr/> 
-                    <input value='Solaris' type="text" placeholder="Moonrise Kingdom">
+                    <input type="text" placeholder="Moonrise Kingdom">
                 </div> 
                 <div class="match input">
-                    <input value='Moonrise Kingdom' type="text" placeholder="The Royal Tennenbaums">
+                    <input type="text" placeholder="Titanic">
                     <hr/> 
-                    <input value='Jerk' type="text" placeholder="Moonrise Kingdom">
+                    <input type="text" placeholder="The Ring">
                 </div> 
                 <div class="match input">
-                    <input value='Titanic' type="text" placeholder="The Royal Tennenbaums">
+                    <input type="text" placeholder="Avatar">
                     <hr/> 
-                    <input value='Blue Velvet' type="text" placeholder="Moonrise Kingdom">
+                    <input type="text" placeholder="The Departed">
                 </div> 
                 <div class="match input">
-                    <input value='Twin Peaks' type="text" placeholder="The Royal Tennenbaums">
+                    <input type="text" placeholder="Crazy Rich Asians">
                     <hr/> 
-                    <input value='Rushmore' type="text" placeholder="Moonrise Kingdom">
+                    <input type="text" placeholder="Schindler's List">
                 </div> 
             </div>
             <div class="col right">
+                Insert movies to the left and hit Enter! <br><br>
+                Reload the page to start over again!
             </div>
         </div> 
     </main> 
