--- a/templates/index.html
+++ b/templates/index.html
@@ -24,24 +24,39 @@
         <div class="wrapper wide">
             <div class="col left">
                 <div class="match input">
-                    <input type="text" placeholder="The Royal Tennenbaums">
+                    <input type="text" value="The Royal Tennenbaums">
                     <hr/> 
-                    <input type="text" placeholder="Moonrise Kingdom">
+                    <input type="text" value="Moonrise Kingdom">
                 </div> 
                 <div class="match input">
-                    <input type="text" placeholder="Titanic">
+                    <input type="text" value="Titanic">
                     <hr/> 
-                    <input type="text" placeholder="The Ring">
+                    <input type="text" value="The Ring">
                 </div> 
                 <div class="match input">
-                    <input type="text" placeholder="Avatar">
+                    <input type="text" value="Avatar">
                     <hr/> 
-                    <input type="text" placeholder="The Departed">
+                    <input type="text" value="The Departed">
                 </div> 
                 <div class="match input">
-                    <input type="text" placeholder="Crazy Rich Asians">
+                    <input type="text" value="Crazy Rich Asians">
                     <hr/> 
-                    <input type="text" placeholder="Schindler's List">
+                    <input type="text" value="Schindler's List">
+                </div> 
+                <div class="match input">
+                    <input type="text" value="Cabin in the Woods">
+                    <hr/> 
+                    <input type="text" value="The Babadook">
+                </div> 
+                <div class="match input">
+                    <input type="text" value="12 Angry Men">
+                    <hr/> 
+                    <input type="text" value="12 Monkies">
+                </div> 
+                <div class="match input">
+                    <input type="text" value="Excalibur">
+                    <hr/> 
+                    <input type="text" value="The Office">
                 </div> 
             </div>
             <div class="col right">
