--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Movie Bracket</title>
     <link rel="stylesheet" href="static/css/reset.css">
     <link rel="stylesheet" href="static/css/style.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="static/js/jquery.js"></script>
     <script type="text/javascript" src="static/js/bracket.js"></script>
 </head>
 <body>
@@ -52,11 +52,6 @@
                     <input type="text" value="12 Angry Men">
                     <hr/> 
                     <input type="text" value="12 Monkies">
-                </div> 
-                <div class="match input">
-                    <input type="text" value="Excalibur">
-                    <hr/> 
-                    <input type="text" value="The Office">
                 </div> 
             </div>
             <div class="col right">
