feat: edge configuration

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,9 +49,19 @@
                     <input type="text" value="The Babadook">
                 </div> 
                 <div class="match input">
-                    <input type="text" value="12 Angry Men">
+                    <input type="text" value="Hugo">
                     <hr/> 
-                    <input type="text" value="12 Monkies">
+                    <input type="text" value="I Am Legend">
+                </div> 
+                <div class="match input">
+                    <input type="text" value="Hugo">
+                    <hr/> 
+                    <input type="text" value="I Am Legend">
+                </div> 
+                <div class="match input">
+                    <input type="text" value="Hugo">
+                    <hr/> 
+                    <input type="text" value="I Am Legend">
                 </div> 
             </div>
             <div class="col right">
