--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <title>Movie Bracket</title>
     <link rel="stylesheet" href="static/css/reset.css">
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/hint.css">
     <script type="text/javascript" src="static/js/jquery.js"></script>
     <script type="text/javascript" src="static/js/bracket.js"></script>
 </head>
@@ -47,16 +48,6 @@
                     <input type="text" value="Cabin in the Woods">
                     <hr/> 
                     <input type="text" value="The Babadook">
-                </div> 
-                <div class="match input">
-                    <input type="text" value="Hugo">
-                    <hr/> 
-                    <input type="text" value="I Am Legend">
-                </div> 
-                <div class="match input">
-                    <input type="text" value="Hugo">
-                    <hr/> 
-                    <input type="text" value="I Am Legend">
                 </div> 
                 <div class="match input">
                     <input type="text" value="Hugo">
