--- a/templates/index.html
+++ b/templates/index.html
@@ -30,34 +30,21 @@
                     <input type="text" value="Moonrise Kingdom">
                 </div> 
                 <div class="match input">
+                    <input type="text" value="The Royal Tennenbaums">
+                    <hr/> 
+                    <input type="text" value="Moonrise Kingdom">
+                </div> 
+                <div class="match input">
                     <input type="text" value="Titanic">
                     <hr/> 
                     <input type="text" value="The Ring">
                 </div> 
-                <div class="match input">
-                    <input type="text" value="Avatar">
-                    <hr/> 
-                    <input type="text" value="The Departed">
-                </div> 
-                <div class="match input">
-                    <input type="text" value="Crazy Rich Asians">
-                    <hr/> 
-                    <input type="text" value="Schindler's List">
-                </div> 
-                <div class="match input">
-                    <input type="text" value="Cabin in the Woods">
-                    <hr/> 
-                    <input type="text" value="The Babadook">
-                </div> 
-                <div class="match input">
-                    <input type="text" value="Hugo">
-                    <hr/> 
-                    <input type="text" value="I Am Legend">
-                </div> 
             </div>
             <div class="col right">
-                Insert movies to the left and hit Enter! <br><br>
-                Reload the page to start over again!
+                <button>Start a Bracket</button>
+                <br/>
+                <button>Join a Bracket</button>
+                <input type="text">
             </div>
         </div> 
     </main> 
